# quack-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LESSONS.md  README.md  RELEASING.md  SECURITY.md  build.rs  clippy.toml  codecov.yml  deny.toml  mutants.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  benchmarks.yml  ci.yml  coverage.yml  docs.yml  mutants.yml  release.yml
benches/: interval_bench.rs
book/src/: SUMMARY.md  contributing.md  faq.md  introduction.md  publishing.md  robots.txt  sitemap.xml  testing.md
book/src/concepts/: entry-point.md  errors.md  types.md
book/src/data/: complex-types.md  nulls-and-strings.md  values-and-parameters.md  vectors.md
book/src/duckdb-1-5/: appender.md  error-data.md  expression.md  file-system.md  instance-cache.md  selection-vector.md
book/src/functions/: aggregate-sets.md  aggregate.md  cast-functions.md  copy-functions.md  replacement-scan.md  scalar.md  table-functions.md
book/src/getting-started/: first-extension.md  installation.md  quick-start.md
book/src/reference/: changelog.md  known-limitations.md  type-id.md
book/src/security/: secrets.md  tls.md  warnings.md
book/theme/: head.hbs
docs/: E2E_DOGFOOD_REPORT.md  architecture.md  duckdb-v1.5.1-evaluation.md  ffi-reference.md
examples/hello-ext/: Cargo.toml  README.md
examples/hello-ext/src/: lib.rs
scripts/: generate-sitemap.py
src/: appender.rs  callback.rs  catalog.rs  chunk_writer.rs  client_context.rs  config.rs  config_option.rs  connection.rs  copy_function.rs  data_chunk.rs  error.rs  error_data.rs  expression.rs  file_system.rs  instance_cache.rs  lib.rs  prelude.rs  secrets.rs  selection_vector.rs  table_description.rs  tls.rs  value.rs  warning.rs
src/aggregate/: info.rs  mod.rs
src/aggregate/builder/: set.rs  single.rs  tests.rs
src/cast/: builder.rs
src/copy_function/: info.rs  mod.rs
src/replacement_scan/: mod.rs
src/scaffold/: templates.rs  tests.rs
src/scalar/: info.rs  mod.rs
src/scalar/builder/: set.rs  single.rs  tests.rs
src/table/: builder.rs  info.rs  mod.rs  typed.rs
src/testing/: bundled_api_init.cpp  in_memory_db.rs  mock_registrar.rs  mock_vector.rs  mod.rs
src/types/: logical_type.rs  mod.rs  type_id.rs
src/validate/description_yml/: tests.rs
src/vector/: complex.rs  mod.rs  reader.rs  string.rs  struct_reader.rs  struct_writer.rs  writer.rs
tests/: integration_test.rs
